--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.2",
     "antd": "^5.17.0",
+    "axios": "^1.6.8",
     "i": "^0.3.7",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
