--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.2",
+    "@mui/x-date-pickers": "^7.4.0",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
     "i": "^0.3.7",
     "moment": "^2.30.1",
     "react": "^18.2.0",
