--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.2",
     "@mui/x-date-pickers": "^7.4.0",
+    "@wavesurfer/react": "^1.0.6",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
@@ -33,7 +34,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "styled-components": "^6.1.10",
-    "use-react-countries": "^2.0.1"
+    "use-react-countries": "^2.0.1",
+    "wavesurfer-react": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
