--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "antd": "^5.17.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "express": "^4.19.2",
     "i": "^0.3.7",
     "moment": "^2.30.1",
     "react": "^18.2.0",
