--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "express": "^4.19.2",
     "i": "^0.3.7",
     "moment": "^2.30.1",
+    "postcss-preset-env": "^9.5.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
+    "react-to-pdf": "^1.0.1",
     "styled-components": "^6.1.10",
     "use-react-countries": "^2.0.1",
     "wavesurfer-react": "^3.0.2"
