--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express": "^4.19.2",
     "i": "^0.3.7",
     "moment": "^2.30.1",
+    "postcss-color-function": "^4.1.0",
+    "postcss-import": "^16.1.0",
     "postcss-preset-env": "^9.5.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,7 +47,6 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.10.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
