--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@wavesurfer/react": "^1.0.6",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "dayjs": "^1.11.11",
     "express": "^4.19.2",
     "i": "^0.3.7",
@@ -35,9 +36,11 @@
     "postcss-import": "^16.1.0",
     "postcss-preset-env": "^9.5.13",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-to-pdf": "^1.0.1",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.10",
     "use-react-countries": "^2.0.1",
     "wavesurfer-react": "^3.0.2"
