--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.2",
@@ -38,6 +39,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.0",
     "react-to-pdf": "^1.0.1",
     "recharts": "^2.12.7",
