--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/styled-engine-sc": "6.0.0-alpha.18",
     "@mui/x-charts": "^7.3.2",
     "@mui/x-date-pickers": "^7.4.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "@wavesurfer/react": "^1.0.6",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
@@ -33,6 +34,7 @@
     "dayjs": "^1.11.11",
     "express": "^4.19.2",
     "i": "^0.3.7",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "postcss-color-function": "^4.1.0",
     "postcss-import": "^16.1.0",
@@ -41,9 +43,11 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-to-pdf": "^1.0.1",
     "recharts": "^2.12.7",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.10",
     "use-react-countries": "^2.0.1",
     "wavesurfer-react": "^3.0.2"
