--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
     "dayjs": "^1.11.11",
+    "email-validator": "^2.0.4",
     "express": "^4.19.2",
     "i": "^0.3.7",
     "js-cookie": "^3.0.5",
