--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/x-charts": "^7.3.2",
     "@mui/x-date-pickers": "^7.4.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.40.1",
     "@wavesurfer/react": "^1.0.6",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
