--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.40.1",
     "@wavesurfer/react": "^1.0.6",
+    "age-calculator": "^1.0.0",
     "antd": "^5.17.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.3",
