ci: update deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,10 +14,18 @@ jobs:
       - name: Use Node.js 22
         uses: actions/setup-node@v3
         with:
-          node-version: 22.x
-          
+          node-version: '22.x'
+
+      - name: Debug SSH Key
+        run: |
+          if [ -z "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
+            echo "SSH_PRIVATE_KEY is empty"
+          else
+            echo "SSH_PRIVATE_KEY is set"
+          fi
+
       - name: Deploy to VPS using SSH
-        uses: appleboy/ssh-action@v0.1.10  # Updated to a specific stable version
+        uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SERVER_IP }}
           username: ${{ secrets.SERVER_USERNAME }}
@@ -26,6 +34,5 @@ jobs:
           script: |
             cd /home/camiru/htdocs/camiru.com/
             git pull origin main
-            pnpm build
-            pm2 restart 0 --update-env
+            npm install --production
             # Add your application startup commands here (e.g., pm2 start your_app.js)
