--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux": "^5.0.1",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.10",
+    "swiper": "^11.1.14",
     "use-react-countries": "^2.0.1",
     "wavesurfer-react": "^3.0.2"
   },
