--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.3",
+    "@livekit/components-react": "^2.6.9",
+    "@livekit/components-styles": "^1.1.4",
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.17",
@@ -38,9 +40,14 @@
     "dayjs": "^1.11.11",
     "email-validator": "^2.0.4",
     "express": "^4.19.2",
+    "global": "^4.4.0",
     "i": "^0.3.7",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "livekit-client": "^2.7.1",
+    "livekit-server-sdk": "^2.9.2",
     "moment": "^2.30.1",
+    "npm": "^10.9.1",
     "postcss-color-function": "^4.1.0",
     "postcss-import": "^16.1.0",
     "postcss-preset-env": "^9.5.13",
@@ -56,10 +63,12 @@
     "react-to-pdf": "^1.0.1",
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.10",
     "swiper": "^11.1.14",
     "use-react-countries": "^2.0.1",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "wavesurfer-react": "^3.0.2"
   },
   "devDependencies": {
